# template

./: cookiecutter.json  readme.md
games/: cookiecutter.json
games/platformer/: cookiecutter.json
games/platformer/{{ cookiecutter.project_slug }}/: main.py
games/platformer/{{ cookiecutter.project_slug }}/assets/image/: readme.md
games/platformer/{{cookiecutter.project_slug}}/assets/map/: readme.md
platformer/: cookiecutter.json
platformer/{{cookiecutter.__project_slug}}/: license.md  main.py  pyproject.toml  readme.md
platformer/{{cookiecutter.project_slug}}/: license.md  main.py
platformer/{{cookiecutter.project_slug}}/assets/sound/: readme.md
