[project]
name = "{{cookiecutter.__project_slug}}"
description = "{{cookiecutter.description}}"
readme = "readme.md"
authors = [
    {name="{{cookiecutter.author}}", email="{{cookiecutter.email}}"}
]
license = {file = "license.md"}
requires-python = ">=3.9"
dependencies = [
    "arcade"
]
dynamic = ["version"]